# ghostroute

./: .gitignore  Cargo.toml  README.md  composable-scraper.js  feature-list.md  grok-reverse-api-grok-main.js  grok-reverse-api.js  package-lock.json  package.json  search-scraper.js  server.js  server.test.js  vitest.config.js
ask-grok-cli/: .gitignore  Cargo.toml  README.md
ask-grok-cli/src/: main.rs
ask-grok-cli/src/automation/: locators.rs  mod.rs  probe.rs  response.rs  typing.rs
ask-grok-cli/src/browser/: mod.rs
ask-grok-cli/src/cli/: args.rs
ask-grok-cli/src/config/: mod.rs
ask-grok-cli/src/ui/: mod.rs
ask-perplexity-cli/: Cargo.toml  README.md
ask-perplexity-cli/src/: lib.rs  main.rs  types.rs
ask-perplexity-cli/src/automation/: human.rs  mod.rs  scrape.rs
ask-perplexity-cli/src/browser/: mod.rs
ask-perplexity-cli/src/cli/: args.rs
ask-perplexity-cli/src/config/: cookies.rs  mod.rs
ask-perplexity-cli/src/parse/: mod.rs  parser.rs
ask-perplexity-cli/tests/: parse.rs  smoke.rs
ask-perplexity-cli/tests/fixtures/: deep-research-web.html
cookie-master-key/: README.md  manifest.json  popup.html  popup.js
docs/: architecture.md  server.md
docs/superpowers/plans/: 2026-04-22-ghostroute-monorepo-setup.md  2026-04-23-perplexity-node-provider.md  2026-04-24-perplexity-rust-cli.md  2026-04-27-fast-travel-cli-migration.md
docs/superpowers/specs/: 2026-04-22-ghostroute-monorepo-setup-design.md  2026-04-23-perplexity-scraper-design.md  2026-04-27-fast-travel-cli-design.md
fast-travel-cli/: Cargo.toml  README.md
fast-travel-cli/src/: main.rs
ghostroute-browser/: Cargo.toml
ghostroute-browser/src/: browser.rs  cookies.rs  dump.rs  human.rs  interstitial.rs  lib.rs  profile.rs  stealth.rs
providers/grok/: README.md
providers/perplexity/: README.md  errors.js  errors.test.js  human.js  index.js  index.test.js  jobs.js  jobs.test.js  parse.js  parse.test.js  scrape.js  scrape.test.js  selectors.js
providers/perplexity/__fixtures__/: auto-web.html  pro-web.html  reasoning-web.html
scripts/: button-probe.mjs  dissect-fixtures.mjs  model-menu-human-probe.mjs  perplexity-probe.mjs  sidebar-probe.mjs
src/: main.rs
watch-feeds-cli/: Cargo.toml
watch-feeds-cli/src/: cli.rs  db.rs  feed.rs  main.rs  sink.rs
