[workspace]
resolver = "2"
members = [
    "ghostroute-browser",
    "fast-travel-cli",
    "ask-perplexity-cli",
    "ask-grok-cli",
    "watch-feeds-cli",
]

# Shared crate versions so all members agree. Adding a workspace dep here means
# downstream crates can write `chromiumoxide.workspace = true` instead of
# pinning a version per Cargo.toml.
[workspace.dependencies]
chromiumoxide = "0.9.1"
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.32"
rand = "0.10.1"
anyhow = "1.0.102"
colored = "3.1.1"
clap = { version = "4.6.1", features = ["derive"] }
