[package]
name = "ask-grok-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
chromiumoxide = "0.9.1"
futures = "0.3"
rand = "0.10.1"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
tiktoken-rs = "0.11.0"
