[package]
name = "fast-travel-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chromiumoxide = "0.9.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
