[package]
name = "fast-travel-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ghostroute-browser = { path = "../ghostroute-browser" }
chromiumoxide.workspace = true
chrono = "0.4.44"
clap.workspace = true
colored.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
